--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-modal": "^3.12.0",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "miragejs": "^0.1.41",
